# mirte_navigation

./: .gitmodules  README.md
grp29/: .gitignore  .gitmodules  package.xml  setup.cfg  setup.py
grp29/config/: waypoints.yaml
grp29/grp29/: README.md  waypoint_follower.py
grp29/laser_config/: scan_filter.yaml
grp29/launch/: navigation_waypoints.launch.py
grp29/maps/: explore_watchdog.py  greenhouse_map.pgm  greenhouse_map.yaml  manual_map.pgm  manual_map.yaml  my_map.pgm  my_map.yaml  obstacle_size.py
grp29/my_greenhouse/: greenhouse_config.yaml  tag_locations.json
grp29/sim_world/: greenhouse.world  temp_map
grp29/slam_config/: mirte_slam.yaml
launch/: explore.launch.py
mirte-gazebo/launch/: gazebo_mirte_master_empty.launch.xml
mirte-ros-packages/: .gitignore
mirte-ros-packages/.github/workflows/: colcon-lint.yml  cpp-check.yml  ros-build.yml  ros-build_act.yml  ros-check.yml
mirte-ros-packages/mirte_control/mirte_master_arm_control/: CMakeLists.txt
mirte-ros-packages/mirte_control/mirte_master_arm_control/hardware/: mirte_master_arm_control.cpp
mirte-ros-packages/mirte_control/mirte_master_base_control/: CMakeLists.txt  package.xml
mirte-ros-packages/mirte_moveit_config/launch/: mirte_moveit.launch.py
mirte-ros-packages/mirte_msgs/: CMakeLists.txt
mirte-ros-packages/mirte_msgs/srv/: SetNeopixel.srv  SetNeopixelSingle.srv
mirte_navigation/: README.md  package.xml
mirte_navigation/launch/: explore.launch.py  robot_navigation.launch.py
mirte_navigation/params/: mirte_nav2_params.yaml
params/: mirte_nav2_params.yaml
(+2 files in other folders)
